<resources>
    <!--main views -->
    <string name="app_name">Schauburgr</string>
    <string name="title_guide">Programm</string>
    <string name="title_movies">Filme</string>
    <string name="title_about">Über die App</string>

    <!-- various ui strings -->
    <string name="day_title_today">Heute</string>
    <string name="day_title_tomorrow">Morgen</string>

    <!-- guide view -->
    <string name="guide_state_hint_loading">Lade Programmvorschau</string>
    <string name="guide_state_hint_error_default">Programm konnte nicht geladen werden</string>

    <!-- about view -->
    <string name="about_idea">Idee, Programmierung</string>
    <string name="about_jonas_gerdes">Jonas Gerdes\nwww.jonasgerdes.com</string>
    <string name="about_github">Schauburgr ist OpenSource.\nQuelltext verfügbar unter\nhttps://github.com/JGerdes/Schauburgr</string>
    <string name="about_data_source">Datenquellen</string>
    <string name="about_schauburg">Schauburg-Cineworld\nwww.schauburg-cineworld.de</string>
    <string name="about_disclaimer_title">Disclaimer</string>
    <string name="about_disclaimer">Schauburgr ist eine inoffizielle App und steht in keiner direkten Verbindung zur Schauburg-Cinewold oder kinoheld.de. Basisdaten wie Vorstellungszeiten, Namen der Filme, etc. werden von der Website des Kinos geladen; entsprechende Rechte sind dem Impressum der Schauburg-Cineworld zu entnehmen.
        \nWeiterführende Daten werden der API von TMDb entnommen.
        \n\nAlle Angaben sind ohne Gewähr; es wird keine Garantie für die Richtig- und Vollständigkeit der dargestellten Informationen gegeben und keine Haftung für eventuell verursachte Schäden übernommen.</string>
    <string name="about_open_source_title">OpenSource-Lizenzen</string>
    <string name="about_data_source_screenings">Vorstellungszeiten, Basisinformationen</string>
    <string name="about_data_source_tmdb">This product uses the TMDb API but is not endorsed or certified by TMDb.</string>
    <string name="about_cinema_selection_button">Kino wechseln</string>
    <string name="about_cinema_selection_dialog_title">Kino auswählen</string>
    <string name="about_cinema_selection_dialog_schauburg">Schauburg Cineworld</string>
    <string name="about_cinema_selection_dialog_central">Central Cineworld</string>

    <!-- generic ui state messages -->
    <string name="network_error_request_limit">Zu schnelle Abfragen, warte kurz!</string>
    <string name="network_error_no_connection">Keine Internetverbindung </string>
    <string name="snackbar_action_refresh">Neu laden</string>
    <string name="chrome_tab_reservation_action_goto_movie">zum Film</string>

    <!-- entity related -->
    <string name="movie_extra_3d">3D</string>
    <string name="movie_extra_atmos">Atmos</string>
    <string name="movie_extra_tip">Tipp</string>
    <string name="movie_extra_ot">OT</string>
    <string name="movie_extra_reel">Filmrolle</string>
    <string name="movie_extra_ladies_night">Ladies Night</string>
    <string name="movie_extra_preview">Vorpremiere</string>
    <string name="movie_extra_last_screening">Letzte Gelegenheit</string>

    <!-- movies list view -->
    <string name="movie_list_category_top">Top Filme</string>
    <string name="movie_list_category_new">Neuheiten</string>
    <string name="movie_list_category_kids">Für Kinder</string>
    <string name="movie_list_category_action">Action</string>
    <string name="movie_list_category_thriller">Zum Nägel kauen</string>
    <string name="movie_list_category_specials">Außer der Reihe</string>
    <string name="movie_list_category_comedy">Zum Lachen</string>
    <string name="movie_list_category_3d">In 3D</string>
    <string name="movie_list_category_specials_subtitle">Für Arthouse-Fans und Opernfreunde</string>
    <string name="movie_list_category_thriller_subtitle">Spannende Thriller und Horrorfilme</string>
    <string name="movie_list_category_atmos">Atmosphärischer Sound</string>
    <string name="movie_list_category_atmos_subtitle">Filme in Dolby Atmos</string>
    <string name="movie_list_category_long">Sitzfleisch mitbringen</string>
    <string name="movie_list_category_long_subtitle">Filme mit Überlänge</string>

    <!-- movie details -->
    <string name="movie_detail_next_screenings">Nächste Vorstellungen</string>
    <string name="movie_detail_duration_minutes">%1$d Min</string>
    <string name="movie_detail_content_rating">ab %1$d</string>

    <!-- generic formats and separators -->
    <string name="screenings_format_time">HH:mm</string>
    <string name="separator_genre">,\u0020</string>
    <string name="separator_directors">,\u0020</string>
    <string name="separator_cast">,\u0020</string>
    <string name="screening_format_date">EE, dd.MM</string>
    <string name="movie_list_category_remaining">Weitere Filme</string>


</resources>
